Resolved the extra space issue that appeared on the right side of "Blog" page.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ header {
     z-index: 100;
 }
 
+#blogPage {
+    overflow-x: hidden;
+}
+
 main {
     margin: 14px;
 }
@@ -748,6 +752,10 @@ footer {
         height: unset;
         margin: unset;
         overflow: hidden;
+    }
+
+    #blogPage {
+        overflow-x: hidden;
     }
 
     #blogText {
